@@ -746,6 +746,10 @@ static bool HLinst_ok(const assignment &a, unsigned short int i, const G_t &G, c
     return(false);
   if(exstk && (operand_on_stack(left, a, i, G) || operand_on_stack(right, a, i, G)) && (ic->op == '>' || ic->op == '<'))
     return(false);
+  if(exstk && ic->op == '+' && getSize(operandType(result)) >= 2 && input_in_HL &&
+    (operand_on_stack(left, a, i, G) && (ia.registers[REG_L][1] > 0 || ia.registers[REG_H][1] > 0) ||
+    operand_on_stack(right, a, i, G) && (ia.registers[REG_L][1] > 0 || ia.registers[REG_H][1] > 0)))
+    return(false);
 
   if(ic->op == '+' && getSize(operandType(result)) == 2 && (IS_OP_LITERAL (right) && ulFromVal (OP_VALUE (IC_RIGHT(ic))) <= 3 || IS_OP_LITERAL (left) && ulFromVal (OP_VALUE (IC_LEFT(ic))) <= 3) && 
     (operand_in_reg(result, REG_L, ia, i, G) && I[ia.registers[REG_L][1]].byte == 0 && operand_in_reg(result, REG_H, ia, i, G)))
